--- a/HDD-Benchmark/.project
+++ b/HDD-Benchmark/.project
@@ -31,7 +31,7 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.buildLocation</key>
-					<value>${workspace_loc:/HDD-Benchmark/src}</value>
+					<value>${workspace_loc:/HDD-Benchmark/Default}</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.cleanBuildTarget</key>
