--- a/HDD-Benchmark/Debug/makefile
+++ b/HDD-Benchmark/Debug/makefile
@@ -43,14 +43,14 @@ all: HDD-Benchmark
 # Tool invocations
 HDD-Benchmark: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
-	@echo 'Invoking: Cross G++ Linker'
+	@echo 'Invoking: GCC C++ Linker'
 	g++  -o "HDD-Benchmark" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) $(C++_DEPS)$(OBJS)$(C_DEPS)$(CC_DEPS)$(CPP_DEPS)$(EXECUTABLES)$(CXX_DEPS)$(C_UPPER_DEPS) HDD-Benchmark
+	-$(RM) $(OBJS)$(C++_DEPS)$(C_DEPS)$(CC_DEPS)$(CPP_DEPS)$(EXECUTABLES)$(CXX_DEPS)$(C_UPPER_DEPS) HDD-Benchmark
 	-@echo ' '
 
 .PHONY: all clean dependents
